MiniSQLParser.cpp

// Generated from MiniSQL.g4 by ANTLR 4.13.2


#include "MiniSQLListener.h"

#include "MiniSQLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MiniSQLParserStaticData final {
  MiniSQLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MiniSQLParserStaticData(const MiniSQLParserStaticData&) = delete;
  MiniSQLParserStaticData(MiniSQLParserStaticData&&) = delete;
  MiniSQLParserStaticData& operator=(const MiniSQLParserStaticData&) = delete;
  MiniSQLParserStaticData& operator=(MiniSQLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag minisqlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MiniSQLParserStaticData> minisqlParserStaticData = nullptr;

void minisqlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (minisqlParserStaticData != nullptr) {
    return;
  }
#else
  assert(minisqlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MiniSQLParserStaticData>(
    std::vector<std::string>{
      "sql", "statement", "queryStatement", "withClause", "cte", "columnAliasList", 
      "queryExpression", "queryTerm", "querySpecification", "setQuantifier", 
      "selectList", "selectItem", "fromClause", "tableReference", "tablePrimary", 
      "joinClause", "joinType", "joinCondition", "whereClause", "groupByClause", 
      "havingClause", "orderByClause", "orderItem", "limitClause", "expression", 
      "orExpression", "andExpression", "notExpression", "comparisonExpression", 
      "comparisonOperator", "additiveExpression", "multiplicativeExpression", 
      "unaryExpression", "primaryExpression", "columnReference", "functionCall", 
      "functionArguments", "caseExpression", "whenClause", "inExpression", 
      "expressionList", "literal", "identifier"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "'='", "", "'<='", "'>='", "'<'", 
      "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", "','", "'.'"
    },
    std::vector<std::string>{
      "", "WITH", "RECURSIVE", "SELECT", "FROM", "WHERE", "GROUP", "BY", 
      "HAVING", "ORDER", "LIMIT", "OFFSET", "UNION", "ALL", "DISTINCT", 
      "JOIN", "INNER", "LEFT", "RIGHT", "FULL", "OUTER", "CROSS", "ON", 
      "USING", "AS", "AND", "OR", "NOT", "IN", "LIKE", "BETWEEN", "EXISTS", 
      "IS", "NULL", "TRUE", "FALSE", "ASC", "DESC", "CASE", "WHEN", "THEN", 
      "ELSE", "END", "EQ", "NE", "LE", "GE", "LT", "GT", "PLUS", "MINUS", 
      "STAR", "DIV", "MOD", "LPAREN", "RPAREN", "COMMA", "DOT", "NUMBER", 
      "STRING", "QUOTED_IDENTIFIER", "IDENTIFIER", "WS", "COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  minisqlParserStaticData = std::move(staticData);
}

}

MiniSQLParser::MiniSQLParser(TokenStream *input) : MiniSQLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MiniSQLParser::MiniSQLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MiniSQLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *minisqlParserStaticData->atn, minisqlParserStaticData->decisionToDFA, minisqlParserStaticData->sharedContextCache, options);
}

MiniSQLParser::~MiniSQLParser() {
  delete _interpreter;
}

const atn::ATN& MiniSQLParser::getATN() const {
  return *minisqlParserStaticData->atn;
}

std::string MiniSQLParser::getGrammarFileName() const {
  return "MiniSQL.g4";
}

const std::vector<std::string>& MiniSQLParser::getRuleNames() const {
  return minisqlParserStaticData->ruleNames;
}

const dfa::Vocabulary& MiniSQLParser::getVocabulary() const {
  return minisqlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MiniSQLParser::getSerializedATN() const {
  return minisqlParserStaticData->serializedATN;
}


//----------------- SqlContext ------------------------------------------------------------------

MiniSQLParser::SqlContext::SqlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniSQLParser::StatementContext* MiniSQLParser::SqlContext::statement() {
  return getRuleContext<MiniSQLParser::StatementContext>(0);
}

tree::TerminalNode* MiniSQLParser::SqlContext::EOF() {
  return getToken(MiniSQLParser::EOF, 0);
}


size_t MiniSQLParser::SqlContext::getRuleIndex() const {
  return MiniSQLParser::RuleSql;
}

void MiniSQLParser::SqlContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSql(this);
}

void MiniSQLParser::SqlContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSql(this);
}

MiniSQLParser::SqlContext* MiniSQLParser::sql() {
  SqlContext *_localctx = _tracker.createInstance<SqlContext>(_ctx, getState());
  enterRule(_localctx, 0, MiniSQLParser::RuleSql);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    statement();
    setState(87);
    match(MiniSQLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MiniSQLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniSQLParser::QueryStatementContext* MiniSQLParser::StatementContext::queryStatement() {
  return getRuleContext<MiniSQLParser::QueryStatementContext>(0);
}


size_t MiniSQLParser::StatementContext::getRuleIndex() const {
  return MiniSQLParser::RuleStatement;
}

void MiniSQLParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void MiniSQLParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

MiniSQLParser::StatementContext* MiniSQLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MiniSQLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    queryStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QueryStatementContext ------------------------------------------------------------------

MiniSQLParser::QueryStatementContext::QueryStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniSQLParser::QueryExpressionContext* MiniSQLParser::QueryStatementContext::queryExpression() {
  return getRuleContext<MiniSQLParser::QueryExpressionContext>(0);
}

MiniSQLParser::WithClauseContext* MiniSQLParser::QueryStatementContext::withClause() {
  return getRuleContext<MiniSQLParser::WithClauseContext>(0);
}


size_t MiniSQLParser::QueryStatementContext::getRuleIndex() const {
  return MiniSQLParser::RuleQueryStatement;
}

void MiniSQLParser::QueryStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQueryStatement(this);
}

void MiniSQLParser::QueryStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQueryStatement(this);
}

MiniSQLParser::QueryStatementContext* MiniSQLParser::queryStatement() {
  QueryStatementContext *_localctx = _tracker.createInstance<QueryStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, MiniSQLParser::RuleQueryStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MiniSQLParser::WITH) {
      setState(91);
      withClause();
    }
    setState(94);
    queryExpression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WithClauseContext ------------------------------------------------------------------

MiniSQLParser::WithClauseContext::WithClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniSQLParser::WithClauseContext::WITH() {
  return getToken(MiniSQLParser::WITH, 0);
}

std::vector<MiniSQLParser::CteContext *> MiniSQLParser::WithClauseContext::cte() {
  return getRuleContexts<MiniSQLParser::CteContext>();
}

MiniSQLParser::CteContext* MiniSQLParser::WithClauseContext::cte(size_t i) {
  return getRuleContext<MiniSQLParser::CteContext>(i);
}

tree::TerminalNode* MiniSQLParser::WithClauseContext::RECURSIVE() {
  return getToken(MiniSQLParser::RECURSIVE, 0);
}

std::vector<tree::TerminalNode *> MiniSQLParser::WithClauseContext::COMMA() {
  return getTokens(MiniSQLParser::COMMA);
}

tree::TerminalNode* MiniSQLParser::WithClauseContext::COMMA(size_t i) {
  return getToken(MiniSQLParser::COMMA, i);
}


size_t MiniSQLParser::WithClauseContext::getRuleIndex() const {
  return MiniSQLParser::RuleWithClause;
}

void MiniSQLParser::WithClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWithClause(this);
}

void MiniSQLParser::WithClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWithClause(this);
}

MiniSQLParser::WithClauseContext* MiniSQLParser::withClause() {
  WithClauseContext *_localctx = _tracker.createInstance<WithClauseContext>(_ctx, getState());
  enterRule(_localctx, 6, MiniSQLParser::RuleWithClause);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(MiniSQLParser::WITH);
    setState(98);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MiniSQLParser::RECURSIVE) {
      setState(97);
      match(MiniSQLParser::RECURSIVE);
    }
    setState(100);
    cte();
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MiniSQLParser::COMMA) {
      setState(101);
      match(MiniSQLParser::COMMA);
      setState(102);
      cte();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CteContext ------------------------------------------------------------------

MiniSQLParser::CteContext::CteContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniSQLParser::IdentifierContext* MiniSQLParser::CteContext::identifier() {
  return getRuleContext<MiniSQLParser::IdentifierContext>(0);
}

tree::TerminalNode* MiniSQLParser::CteContext::AS() {
  return getToken(MiniSQLParser::AS, 0);
}

tree::TerminalNode* MiniSQLParser::CteContext::LPAREN() {
  return getToken(MiniSQLParser::LPAREN, 0);
}

MiniSQLParser::QueryExpressionContext* MiniSQLParser::CteContext::queryExpression() {
  return getRuleContext<MiniSQLParser::QueryExpressionContext>(0);
}

tree::TerminalNode* MiniSQLParser::CteContext::RPAREN() {
  return getToken(MiniSQLParser::RPAREN, 0);
}

MiniSQLParser::ColumnAliasListContext* MiniSQLParser::CteContext::columnAliasList() {
  return getRuleContext<MiniSQLParser::ColumnAliasListContext>(0);
}


size_t MiniSQLParser::CteContext::getRuleIndex() const {
  return MiniSQLParser::RuleCte;
}

void MiniSQLParser::CteContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCte(this);
}

void MiniSQLParser::CteContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCte(this);
}

MiniSQLParser::CteContext* MiniSQLParser::cte() {
  CteContext *_localctx = _tracker.createInstance<CteContext>(_ctx, getState());
  enterRule(_localctx, 8, MiniSQLParser::RuleCte);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    identifier();
    setState(110);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MiniSQLParser::LPAREN) {
      setState(109);
      columnAliasList();
    }
    setState(112);
    match(MiniSQLParser::AS);
    setState(113);
    match(MiniSQLParser::LPAREN);
    setState(114);
    queryExpression();
    setState(115);
    match(MiniSQLParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColumnAliasListContext ------------------------------------------------------------------

MiniSQLParser::ColumnAliasListContext::ColumnAliasListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniSQLParser::ColumnAliasListContext::LPAREN() {
  return getToken(MiniSQLParser::LPAREN, 0);
}

std::vector<MiniSQLParser::IdentifierContext *> MiniSQLParser::ColumnAliasListContext::identifier() {
  return getRuleContexts<MiniSQLParser::IdentifierContext>();
}

MiniSQLParser::IdentifierContext* MiniSQLParser::ColumnAliasListContext::identifier(size_t i) {
  return getRuleContext<MiniSQLParser::IdentifierContext>(i);
}

tree::TerminalNode* MiniSQLParser::ColumnAliasListContext::RPAREN() {
  return getToken(MiniSQLParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> MiniSQLParser::ColumnAliasListContext::COMMA() {
  return getTokens(MiniSQLParser::COMMA);
}

tree::TerminalNode* MiniSQLParser::ColumnAliasListContext::COMMA(size_t i) {
  return getToken(MiniSQLParser::COMMA, i);
}


size_t MiniSQLParser::ColumnAliasListContext::getRuleIndex() const {
  return MiniSQLParser::RuleColumnAliasList;
}

void MiniSQLParser::ColumnAliasListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterColumnAliasList(this);
}

void MiniSQLParser::ColumnAliasListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitColumnAliasList(this);
}

MiniSQLParser::ColumnAliasListContext* MiniSQLParser::columnAliasList() {
  ColumnAliasListContext *_localctx = _tracker.createInstance<ColumnAliasListContext>(_ctx, getState());
  enterRule(_localctx, 10, MiniSQLParser::RuleColumnAliasList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(MiniSQLParser::LPAREN);
    setState(118);
    identifier();
    setState(123);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MiniSQLParser::COMMA) {
      setState(119);
      match(MiniSQLParser::COMMA);
      setState(120);
      identifier();
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(126);
    match(MiniSQLParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QueryExpressionContext ------------------------------------------------------------------

MiniSQLParser::QueryExpressionContext::QueryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MiniSQLParser::QueryTermContext *> MiniSQLParser::QueryExpressionContext::queryTerm() {
  return getRuleContexts<MiniSQLParser::QueryTermContext>();
}

MiniSQLParser::QueryTermContext* MiniSQLParser::QueryExpressionContext::queryTerm(size_t i) {
  return getRuleContext<MiniSQLParser::QueryTermContext>(i);
}

std::vector<tree::TerminalNode *> MiniSQLParser::QueryExpressionContext::UNION() {
  return getTokens(MiniSQLParser::UNION);
}

tree::TerminalNode* MiniSQLParser::QueryExpressionContext::UNION(size_t i) {
  return getToken(MiniSQLParser::UNION, i);
}

std::vector<tree::TerminalNode *> MiniSQLParser::QueryExpressionContext::ALL() {
  return getTokens(MiniSQLParser::ALL);
}

tree::TerminalNode* MiniSQLParser::QueryExpressionContext::ALL(size_t i) {
  return getToken(MiniSQLParser::ALL, i);
}


size_t MiniSQLParser::QueryExpressionContext::getRuleIndex() const {
  return MiniSQLParser::RuleQueryExpression;
}

void MiniSQLParser::QueryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQueryExpression(this);
}

void MiniSQLParser::QueryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQueryExpression(this);
}

MiniSQLParser::QueryExpressionContext* MiniSQLParser::queryExpression() {
  QueryExpressionContext *_localctx = _tracker.createInstance<QueryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 12, MiniSQLParser::RuleQueryExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    queryTerm();
    setState(136);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MiniSQLParser::UNION) {
      setState(129);
      match(MiniSQLParser::UNION);
      setState(131);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MiniSQLParser::ALL) {
        setState(130);
        match(MiniSQLParser::ALL);
      }
      setState(133);
      queryTerm();
      setState(138);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QueryTermContext ------------------------------------------------------------------

MiniSQLParser::QueryTermContext::QueryTermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniSQLParser::QuerySpecificationContext* MiniSQLParser::QueryTermContext::querySpecification() {
  return getRuleContext<MiniSQLParser::QuerySpecificationContext>(0);
}

tree::TerminalNode* MiniSQLParser::QueryTermContext::LPAREN() {
  return getToken(MiniSQLParser::LPAREN, 0);
}

MiniSQLParser::QueryExpressionContext* MiniSQLParser::QueryTermContext::queryExpression() {
  return getRuleContext<MiniSQLParser::QueryExpressionContext>(0);
}

tree::TerminalNode* MiniSQLParser::QueryTermContext::RPAREN() {
  return getToken(MiniSQLParser::RPAREN, 0);
}


size_t MiniSQLParser::QueryTermContext::getRuleIndex() const {
  return MiniSQLParser::RuleQueryTerm;
}

void MiniSQLParser::QueryTermContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQueryTerm(this);
}

void MiniSQLParser::QueryTermContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQueryTerm(this);
}

MiniSQLParser::QueryTermContext* MiniSQLParser::queryTerm() {
  QueryTermContext *_localctx = _tracker.createInstance<QueryTermContext>(_ctx, getState());
  enterRule(_localctx, 14, MiniSQLParser::RuleQueryTerm);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(144);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MiniSQLParser::SELECT: {
        enterOuterAlt(_localctx, 1);
        setState(139);
        querySpecification();
        break;
      }

      case MiniSQLParser::LPAREN: {
        enterOuterAlt(_localctx, 2);
        setState(140);
        match(MiniSQLParser::LPAREN);
        setState(141);
        queryExpression();
        setState(142);
        match(MiniSQLParser::RPAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuerySpecificationContext ------------------------------------------------------------------

MiniSQLParser::QuerySpecificationContext::QuerySpecificationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniSQLParser::QuerySpecificationContext::SELECT() {
  return getToken(MiniSQLParser::SELECT, 0);
}

MiniSQLParser::SelectListContext* MiniSQLParser::QuerySpecificationContext::selectList() {
  return getRuleContext<MiniSQLParser::SelectListContext>(0);
}

MiniSQLParser::SetQuantifierContext* MiniSQLParser::QuerySpecificationContext::setQuantifier() {
  return getRuleContext<MiniSQLParser::SetQuantifierContext>(0);
}

MiniSQLParser::FromClauseContext* MiniSQLParser::QuerySpecificationContext::fromClause() {
  return getRuleContext<MiniSQLParser::FromClauseContext>(0);
}

MiniSQLParser::WhereClauseContext* MiniSQLParser::QuerySpecificationContext::whereClause() {
  return getRuleContext<MiniSQLParser::WhereClauseContext>(0);
}
